Added common Google Analytics tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,14 +22,14 @@
     <![endif]-->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102484926-15"></script>
+    <!-- Common Google Analytics [UA] setup for CDS GitHub Pages websites -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102484926-22"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-102484926-15',  { 'anonymize_ip': true });
+      gtag('config', 'UA-102484926-22', { 'anonymize_ip': true });
     </script>
 
   </head>
